--- a/compose.yml
+++ b/compose.yml
@@ -3,12 +3,12 @@ version: "3"
 services:
  devopsdb:
    container_name: devopsdb
-   image: shaikmustafa/valluri:dbimage
+   image: swethareddy1999/minnu:dockerwebapp
    ports:
      - "3306:3306"
 
  application:
-   image: shaikmustafa/valluri:appimage
+   image: swethareddy1999/minnu:dockerwebdb
    container_name: containerapp
    ports:
      - "1234:8080"
